I added a new utility function and added a bunch of tests. Now the only thing left to do is test the classifier.